More styling for UI in general, fixed some horizontal scrolling bugs, and mostly finalized the UI design for the assisted reading environment.

--- a/static/css/phaidra.css
+++ b/static/css/phaidra.css
@@ -77,6 +77,15 @@ label {
 .alert.alert-success strong {
   color: #19641A !important; }
 
+.progress-bar-morph {
+  background-color: #f4bc78; }
+
+.progress-bar-syn {
+  background-color: #d15241; }
+
+.progress-bar-voc {
+  background-color: #1fadad; }
+
 .bg-success {
   border: 2px #49a556 solid;
   border-radius: 3px;
@@ -239,8 +248,17 @@ label {
 /* Header */
 .banner {
   color: #EEE;
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(bottom, #4e6087 0, #576b97 100);
+  background-image: -o-linear-gradient(bottom, #4e6087 0, #576b97 100);
+  background-image: -moz-linear-gradient(bottom, #4e6087 0, #576b97 100);
+  background-image: -webkit-linear-gradient(bottom, #4e6087 0, #576b97 100);
+  background-image: -ms-linear-gradient(bottom, #4e6087 0, #576b97 100);
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #4e6087), color-stop(1, #576b97));
   background-color: #4e6087;
-  position: relative;
+  background-color: #4e6087;
+  position: fixed;
+  width: 100%;
   height: 81px;
   z-index: 1; }
   .banner #search-form {
@@ -298,76 +316,6 @@ label {
       color: #eeeeee; }
     .navigation a.progress-lessons {
       color: #eeeeee; }
-
-/* Visualization Styles */
-.progress-therm {
-  margin-top: 0px;
-  margin-left: 10px;
-  margin-right: 10px;
-  border: 2px solid whitesmoke;
-  margin-bottom: 20px;
-  height: 20px; }
-  .progress-therm .sec {
-    height: 16px;
-    display: inline-block;
-    margin-right: -4px;
-    -webkit-transition: background-color 0.3s cubic;
-    -moz-transition: background-color 0.3s cubic;
-    -o-transition: background-color 0.3s cubic;
-    -ms-transition: background-color 0.3s cubic;
-    transition: background-color 0.3s cubic; }
-    .progress-therm .sec.morph {
-      background-color: #4e6087; }
-      .progress-therm .sec.morph:hover {
-        background-color: #576b97;
-        -webkit-transition: background-color 0.3s cubic;
-        -moz-transition: background-color 0.3s cubic;
-        -o-transition: background-color 0.3s cubic;
-        -ms-transition: background-color 0.3s cubic;
-        transition: background-color 0.3s cubic; }
-    .progress-therm .sec.syn {
-      background-color: #1fadad; }
-      .progress-therm .sec.syn:hover {
-        background-color: #23c3c3;
-        -webkit-transition: background-color 0.3s cubic;
-        -moz-transition: background-color 0.3s cubic;
-        -o-transition: background-color 0.3s cubic;
-        -ms-transition: background-color 0.3s cubic;
-        transition: background-color 0.3s cubic; }
-    .progress-therm .sec.voc {
-      background-color: #f4bc78; }
-      .progress-therm .sec.voc:hover {
-        background-color: #f6c890;
-        -webkit-transition: background-color 0.3s cubic;
-        -moz-transition: background-color 0.3s cubic;
-        -o-transition: background-color 0.3s cubic;
-        -ms-transition: background-color 0.3s cubic;
-        transition: background-color 0.3s cubic; }
-    .progress-therm .sec.rem {
-      background-color: #EEE; }
-      .progress-therm .sec.rem:hover {
-        background-color: lighter(#fefefe, 5%); }
-    .progress-therm .sec:hover {
-      -webkit-transition: background-color 0.3s cubic;
-      -moz-transition: background-color 0.3s cubic;
-      -o-transition: background-color 0.3s cubic;
-      -ms-transition: background-color 0.3s cubic;
-      transition: background-color 0.3s cubic;
-      cursor: pointer; }
-
-.legend .sec {
-  height: 10px;
-  width: 10px;
-  display: inline-block;
-  border: 1px solid whitesmoke;
-  margin-right: 5px;
-  margin-left: 10px; }
-  .legend .sec.morph {
-    background-color: #4e6087; }
-  .legend .sec.syn {
-    background-color: #1fadad; }
-  .legend .sec.voc {
-    background-color: #f4bc78; }
 
 .user-info img {
   margin-right: 10px; }
@@ -943,10 +891,8 @@ p .greek-text {
   #reader .col-md-6 {
     padding-left: 0;
     padding-right: 0; }
-  #reader .greek-text {
-    font-size: 1.1em; }
   #reader .page {
-    padding: 10px 20px;
+    padding: 10px 80px;
     position: relative;
     margin-top: 0; }
     #reader .page h1 {
@@ -996,7 +942,7 @@ p .greek-text {
         font-size: 24px;
         position: absolute; }
   #reader .notes-container {
-    position: absolute;
+    position: fixed;
     width: 100%;
     bottom: 0; }
     #reader .notes-container .notes {
@@ -1004,10 +950,18 @@ p .greek-text {
       border-top: 1px solid #AAA;
       box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
       padding: 10px; }
-      #reader .notes-container .notes p {
-        margin: 0; }
     #reader .notes-container .note-nav {
       float: right;
       font-size: 24px; }
       #reader .notes-container .note-nav span {
-        padding: 10px; }
+        padding: 5px; }
+  #reader .knowledge-container {
+    position: fixed;
+    bottom: 0;
+    z-index: 10;
+    width: 100%; }
+    #reader .knowledge-container .progress {
+      margin: 0;
+      height: 13px;
+      border-radius: 0;
+      cursor: pointer; }
